Set keyboard focus to newly opened ledger

BUG: 506401
FIXED-IN: 5.2.1
(cherry picked from commit 7ed5639205fa67a225ebba04792d0e488e1dd3d7)